--- a/02BuildingModelKNN.ipynb
+++ b/02BuildingModelKNN.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "df = pd.read_csv('loan_train.csv')\n",
     "X=np.load('X.npy')\n",
     "y = df['loan_status'].values #labels\n",
-    "X= preprocessing.StandardScaler().fit(X).transform(X)\n",
+    "#X= preprocessing.StandardScaler().fit(X).transform(X)\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "       0.71153846, 0.72115385, 0.72115385, 0.75      ])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +124,13 @@
     "pd.DataFrame(y_train).to_csv('ytrain_KNN',index=None)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
