--- a/05BuildingModel_LR.ipynb
+++ b/05BuildingModel_LR.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "df = pd.read_csv('loan_train.csv')\n",
     "X=np.load('X.npy')\n",
     "y = df['loan_status'].values #labels\n",
-    "X= preprocessing.StandardScaler().fit(X).transform(X)\n",
+    "#X= preprocessing.StandardScaler().fit(X).transform(X)\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
      "output_type": "stream",
      "text": [
       "The Jaccard Index is: 0.8\n",
-      "The Log Loss is: 0.4746882599785354\n"
+      "The Log Loss is: 0.47469572648067415\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -112,9 +112,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Jaccard Index is: 0.7714285714285715\n",
+      "The Log Loss is: 0.5674864788622827\n",
+      "The Jaccard Index is: 0.7714285714285715\n",
+      "The Log Loss is: 0.5324335001425637\n",
+      "The Jaccard Index is: 0.7714285714285715\n",
+      "The Log Loss is: 0.5163314912635928\n",
+      "The Jaccard Index is: 0.7714285714285715\n",
+      "The Log Loss is: 0.5073270290138204\n",
+      "The Jaccard Index is: 0.7714285714285715\n",
+      "The Log Loss is: 0.5017324316144246\n",
+      "The Jaccard Index is: 0.7714285714285715\n",
+      "The Log Loss is: 0.49802497245512994\n",
+      "The Jaccard Index is: 0.7714285714285715\n",
+      "The Log Loss is: 0.49546183685497674\n",
+      "The Jaccard Index is: 0.7714285714285715\n",
+      "The Log Loss is: 0.493639456906383\n",
+      "The Jaccard Index is: 0.8\n",
+      "The Log Loss is: 0.49232224564108185\n",
+      "The Jaccard Index is: 0.8\n",
+      "The Log Loss is: 0.49135730618263196\n",
+      "The Jaccard Index is: 0.8\n",
+      "The Log Loss is: 0.49064833513344447\n",
+      "The Jaccard Index is: 0.8\n",
+      "The Log Loss is: 0.49012837787528024\n",
+      "The Jaccard Index is: 0.8\n",
+      "The Log Loss is: 0.48975224511949306\n",
+      "The Jaccard Index is: 0.8\n",
+      "The Log Loss is: 0.4894859927847616\n",
+      "The Jaccard Index is: 0.8\n",
+      "The Log Loss is: 0.4893050730871609\n",
+      "The Jaccard Index is: 0.8\n",
+      "The Log Loss is: 0.48919112518403296\n",
+      "The Jaccard Index is: 0.8\n",
+      "The Log Loss is: 0.4891301989464734\n",
+      "The Jaccard Index is: 0.8\n",
+      "The Log Loss is: 0.48911154805314305\n",
+      "The Jaccard Index is: 0.8\n",
+      "The Log Loss is: 0.48912679282646965\n"
+     ]
+    }
+   ],
    "source": [
     "#in searching for optimal values for C we find that c=.18\n",
     "for c in range(1,20):\n",
@@ -129,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -137,15 +182,15 @@
      "output_type": "stream",
      "text": [
       "The Jaccard Index is: 0.8\n",
-      "The Log Loss is: 0.4746944086343244\n",
+      "The Log Loss is: 0.4746944086343245\n",
       "The Jaccard Index is: 0.8\n",
       "The Log Loss is: 0.47469472353890024\n",
       "The Jaccard Index is: 0.8\n",
       "The Log Loss is: 0.48911154805314305\n",
       "The Jaccard Index is: 0.8\n",
-      "The Log Loss is: 0.47470209266594493\n",
+      "The Log Loss is: 0.4746939278705231\n",
       "The Jaccard Index is: 0.8\n",
-      "The Log Loss is: 0.47469351559283796\n"
+      "The Log Loss is: 0.4746949366612874\n"
      ]
     }
    ],
