--- a/01ML_DataPreProcess.ipynb
+++ b/01ML_DataPreProcess.ipynb
@@ -49,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-11-15 22:02:18--  https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/ML0101ENv3/labs/loan_train.csv\n",
+      "--2019-11-16 14:40:20--  https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/ML0101ENv3/labs/loan_train.csv\n",
       "Resolving s3-api.us-geo.objectstorage.softlayer.net (s3-api.us-geo.objectstorage.softlayer.net)... 67.228.254.196\n",
       "Connecting to s3-api.us-geo.objectstorage.softlayer.net (s3-api.us-geo.objectstorage.softlayer.net)|67.228.254.196|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
@@ -58,7 +58,7 @@
       "\n",
       "loan_train.csv      100%[===================>]  22.56K  --.-KB/s    in 0.03s   \n",
       "\n",
-      "2019-11-15 22:02:19 (652 KB/s) - ‘loan_train.csv’ saved [23101/23101]\n",
+      "2019-11-16 14:40:20 (808 KB/s) - ‘loan_train.csv’ saved [23101/23101]\n",
       "\n"
      ]
     }
@@ -827,6 +827,15 @@
    "source": [
     "#Normalizing the data\n",
     "X= preprocessing.StandardScaler().fit(X).transform(X)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('X',X)"
    ]
   }
  ],
