--- a/03BuildingModelDecisionTree.ipynb
+++ b/03BuildingModelDecisionTree.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "df = pd.read_csv('loan_train.csv')\n",
     "X=np.load('X.npy')\n",
     "y = df['loan_status'].values #labels\n",
-    "X= preprocessing.StandardScaler().fit(X).transform(X)\n",
+    "#X= preprocessing.StandardScaler().fit(X).transform(X)\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
