--- a/04BuildingModelSVM.ipynb
+++ b/04BuildingModelSVM.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "df = pd.read_csv('loan_train.csv')\n",
     "X=np.load('X.npy')\n",
     "y = df['loan_status'].values #labels\n",
-    "X= preprocessing.StandardScaler().fit(X).transform(X)\n",
+    "#X= preprocessing.StandardScaler().fit(X).transform(X)\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -157,13 +157,6 @@
    "source": [
     "# The best values for Support Vector Machine are a linear kernel and a test_size of .1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
