--- a/06Test_Results.ipynb
+++ b/06Test_Results.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "df = pd.read_csv('loan_train.csv')\n",
     "X=np.load('X.npy')\n",
     "y = df['loan_status'].values #labels\n",
-    "X= preprocessing.StandardScaler().fit(X).transform(X)\n",
+    "#X= preprocessing.StandardScaler().fit(X).transform(X)\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-11-15 22:48:47--  https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/ML0101ENv3/labs/loan_test.csv\n",
+      "--2019-11-16 14:41:16--  https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/ML0101ENv3/labs/loan_test.csv\n",
       "Resolving s3-api.us-geo.objectstorage.softlayer.net (s3-api.us-geo.objectstorage.softlayer.net)... 67.228.254.196\n",
       "Connecting to s3-api.us-geo.objectstorage.softlayer.net (s3-api.us-geo.objectstorage.softlayer.net)|67.228.254.196|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
@@ -61,7 +61,7 @@
       "\n",
       "loan_test.csv       100%[===================>]   3.56K  --.-KB/s    in 0s      \n",
       "\n",
-      "2019-11-15 22:48:48 (101 MB/s) - ‘loan_test.csv’ saved [3642/3642]\n",
+      "2019-11-16 14:41:16 (32.8 MB/s) - ‘loan_test.csv’ saved [3642/3642]\n",
       "\n"
      ]
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "3  LogisticRegression  0.740741  0.630418  0.471017"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,13 +334,6 @@
    "source": [
     "# In the future we will use grid search to optimize these parameters, as looping through is simply too messy"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
